--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         </select>
         <button type="button" id="submitBtn">Go</button>
     </form>
-    <script src="/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
